# firescribe

./: .gitattributes  .gitignore  .venv  README.md  pyproject.toml
src/: __main__.py  main.py
src/handlers/: FileHandler.py  file_handler.py
src/openai_service/: openai_service.py
src/utils/: Config.py  Logger.py  settings.py
